--- a/components/EditMyProfile/EditDetails.module.scss
+++ b/components/EditMyProfile/EditDetails.module.scss
@@ -382,8 +382,8 @@
             align-items: flex-end;
             justify-content: flex-end;
             position: absolute;
-            left: 0;
             width: 145px;
+            left: -1.4rem;
         }
     }
 
@@ -410,7 +410,7 @@
         border-radius: 2px;
         padding: 0.875rem 1rem;
         text-align: left;
-        min-width: 75%;
+        min-width: 24%;
         // width: auto;
 
         &:focus {
@@ -474,8 +474,8 @@
         display: flex;
         flex-direction: row;
         gap: 0rem;
-        margin-left: 13%;
-        width: 32%;
+        margin-left: 25%;
+        width: 75%;
         justify-content: flex-start;
     }
 
