--- a/components/StrictRadioCheck/StrictRadio.module.scss
+++ b/components/StrictRadioCheck/StrictRadio.module.scss
@@ -48,13 +48,16 @@
     }
 }
 
+.privacyWrapper{
+    max-width: 70%;
+}
+
 
 @media only screen and (max-width: 1200px) and (min-width: 300px) {
     .StrictWrapper {
         position: absolute;
         right: 0rem;
         max-width: initial;
-        width: 70%;
 
         .StrictWrapper_section {
 
@@ -73,7 +76,6 @@
         position: absolute;
         right: 0rem;
         max-width: initial;
-        width: 40%;
     }
 
 }
