--- a/components/PrivacyModal/Privacy.module.scss
+++ b/components/PrivacyModal/Privacy.module.scss
@@ -17,8 +17,8 @@
 
   .privacy_Info {
     font-size: 14px;
-    font-weight: 500;
-    color: rgba(184, 180, 180, 0.815);
+    font-weight: 400;
+    color: #a3a1a1;
   }
 
   .privacy_row {
