--- a/components/MyProfile/MyProfileCard.module.scss
+++ b/components/MyProfile/MyProfileCard.module.scss
@@ -247,7 +247,7 @@
 
         .mobileAvatar {
           width: 200px;
-          margin: 0 auto 1rem;
+          margin: 0 auto;
           border-radius: 100%;
           border: 8px solid #fff;
           position: relative;
