--- a/components/InputField/SingleInputField/SingleInput.module.scss
+++ b/components/InputField/SingleInputField/SingleInput.module.scss
@@ -92,6 +92,7 @@
         display: flex;
         align-items: center;
         font-weight: 500;
+        min-width: auto;
 
         svg {
           position: initial;
