--- a/components/HomeForm/Form.module.scss
+++ b/components/HomeForm/Form.module.scss
@@ -107,12 +107,12 @@
     background: #ffffff;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
-    h4{
+    h4 {
       text-align: center;
       margin-bottom: 2rem;
       background-color: #fff;
 
-      span{
+      span {
         color: #dc3545;
         font-weight: 500;
       }
@@ -128,6 +128,10 @@
 
     .modal_links {
       color: #065ad8d3;
+      justify-content: right;
+      padding-right: 0.5rem;
+      font-size: 14px;
+      cursor: pointer;
     }
 
     .FromBtnlogin {
@@ -148,6 +152,7 @@
         cursor: pointer;
       }
     }
+
     .modal_input {
       margin-bottom: 1.5rem;
       border: 1px solid gray;
@@ -223,12 +228,19 @@
     position: absolute;
     top: 2rem;
     right: 2rem;
-    background: none;
     border: none;
     border-radius: 50%;
-    font-size: 2rem;
+    font-size: 1rem;
+    height: 2rem;
+    padding: 0;
+    width: 2rem;
+    font-weight: 700;
     background-color: transparent;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     color: #dc3545;
+  }
+  .modal_closeBtn:active {
+    background-color: transparent;
   }
 }
 
