update login ui and make responsive of resetpassword and forget password

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -64,6 +64,9 @@
   font-weight: 500;
   margin-right: 1.5rem;
 }
+.show button:active {
+  background-color: #d91616 !important;
+}
 
 .hide {
   display: none;
