--- a/components/HomeForm/ForgetPassword.module.scss
+++ b/components/HomeForm/ForgetPassword.module.scss
@@ -1,7 +1,7 @@
 .ResetForm {
   width: 35%;
   margin: 0 auto;
-  padding: 2rem 1rem !important;
+  padding: 1.5rem !important;
   border-radius: 7px;
   background: #ffffff;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 0.5rem;
 
     .backButton {
       background-color: transparent;
@@ -28,6 +29,8 @@
       margin: 0;
       line-height: initial;
       width: -webkit-fill-available;
+      color: #dc3545;
+      padding-right: 3rem;
     }
   }
 
@@ -47,8 +50,8 @@
     padding: 0% 1rem;
     font-size: 14px;
 
-    .FormInputDiv{
-        padding: 0% 1rem;
+    .FormInputDiv {
+      padding: 0% 1rem;
     }
 
     .ButtonSection {
@@ -88,9 +91,27 @@
       }
     }
     ul {
+      padding-left: 1rem;
       li {
         font-size: 12px;
         color: #3e3d3d;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 515px) {
+  .ResetForm {
+    padding: 1rem !important;
+    .ResetHeader {
+      h4 {
+        padding-right: 2rem;
+      }
+    }
+
+    .FormDiv {
+      .FormInputDiv {
+        padding: 0%;
       }
     }
   }
