--- a/pages/ResetPassword/ResetPassword.module.scss
+++ b/pages/ResetPassword/ResetPassword.module.scss
@@ -1,15 +1,17 @@
 .mainSec {
   height: 100vh;
   width: 100vw;
-  background-color: rgb(226, 226, 226);
+  background-color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
+  padding: 1rem 4rem;
+
   .childComp {
     height: 100%;
     width: 100%;
     display: flex;
-    background-color: #ffffff;
 
     .childLeft {
       width: 50%;
@@ -18,6 +20,7 @@
       img {
         width: 100%;
         height: 100%;
+        object-fit: contain;
       }
     }
     .childRight {
@@ -38,6 +41,9 @@
             text-align: center;
             width: -webkit-fill-available;
             font-weight: 500;
+            color: #dc3545;
+            font-size: 1.5rem;
+            font-weight: 700;
           }
         }
 
@@ -116,18 +122,24 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 912px) {
   .mainSec {
     .childComp {
       flex-direction: column;
 
       .childLeft {
         width: 100%;
+        height: 250px;
+
+        img {
+          object-fit: cover;
+        }
       }
 
       .childRight {
         margin-top: 2rem;
         width: 100%;
+        align-items: flex-start;
       }
     }
   }
@@ -135,10 +147,22 @@
 
 @media only screen and (max-width: 425px) {
   .mainSec {
+    padding: 0%;
+    padding-bottom: 1rem;
     .childComp {
-      .childRight {
-        margin-top: 2rem;
+      .childLeft {
         width: 100%;
+        height: 159px;
+
+        img {
+          object-fit: cover;
+        }
+      }
+
+      .childRight {
+        margin-top: 0rem;
+        width: 100%;
+        align-items: flex-start;
         .ResetForm {
           .FormDiv {
             .FormInputDiv {
