--- a/components/ProfileCard/TestProfileCard.module.scss
+++ b/components/ProfileCard/TestProfileCard.module.scss
@@ -42,6 +42,7 @@
         width: fit-content;
         margin: 0% auto;
         margin-bottom: 0.7rem;
+        text-transform: capitalize !important;
       }
 
       .name_Heading::after {
