--- a/components/ProfileCard/TestProfileCard.module.scss
+++ b/components/ProfileCard/TestProfileCard.module.scss
@@ -220,8 +220,7 @@
           .profileMatch {
             height: 40px;
             width: 40px;
-            fill: #dc3545;
-            filter: invert(0.5) sepia(2) saturate(20) hue-rotate(355deg);
+            filter: invert(0.5) sepia(2) saturate(93) hue-rotate(21deg);
           }
           span {
             font-weight: 600;
@@ -240,18 +239,31 @@
 
 @media only screen and (max-width: 1020px) and (min-width: 768px) {
   .CardMain {
-    margin: 3rem 5rem;
+    margin: 3rem 3rem;
 
     .profileSection {
       .profiler_Name {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
         .name_Heading {
           margin: auto;
+          font-size: 16px;
         }
 
         div {
           display: flex;
           flex-direction: column;
           align-items: flex-start;
+          align-items: center;
+          width: max-content;
+
+          .active_Status {
+            span {
+              margin-left: 0%;
+            }
+          }
         }
       }
     }
@@ -265,7 +277,7 @@
         gap: 10px;
 
         .info_Tag_Section {
-          grid-template-columns: repeat(2, auto);
+          grid-template-columns: repeat(3, auto);
 
           .info_Tag {
             svg {
@@ -274,13 +286,14 @@
             }
           }
 
-          .card_Button_Wrapper {
-            width: 100%;
-            display: flex;
-            gap: 20px;
-            margin-top: 10px;
-            flex-wrap: wrap;
-
+        }
+        .card_Button_Wrapper {
+          width: 100%;
+          display: flex;
+          gap: 20px;
+          margin-top: 10px;
+          flex-wrap: wrap;
+          .button_section {
             Button {
               font-size: 11px;
 
@@ -289,6 +302,11 @@
                 width: 15px;
               }
             }
+          }
+
+          .profileMatchSection {
+            margin: auto;
+            margin-right: 0;
           }
         }
       }
@@ -405,11 +423,18 @@
           gap: 0px;
           margin-top: 10px;
           align-items: flex-start;
+
+          .active_Status {
+            span {
+              margin-left: 0%;
+            }
+          }
         }
       }
     }
 
     .infoSection {
+      padding-top: 10px;
       .info_Details {
         height: 80%;
         width: 100%;
@@ -421,27 +446,34 @@
           grid-template-columns: repeat(2, auto);
 
           .info_Tag {
+            align-items: flex-end;
             svg {
               height: 16px;
               width: 16px;
             }
           }
+        }
+        .card_Button_Wrapper {
+          margin-top: 0px;
+          gap: 10px;
 
-          .card_Button_Wrapper {
-            width: 100%;
-            display: flex;
-            gap: 20px;
-            margin-top: 10px;
+          .button_section {
+            gap: 10px;
+            margin-top: 0px;
             flex-wrap: wrap;
-
+            justify-content: flex-start;
             Button {
-              font-size: 11px;
+              font-size: 14px;
 
               svg {
-                height: 15px;
-                width: 15px;
+                height: 18px;
+                width: 18px;
               }
             }
+          }
+          .profileMatchSection {
+            margin: auto;
+            margin-right: 0%;
           }
         }
       }
@@ -464,6 +496,8 @@
       border-top-right-radius: initial;
       border-top-left-radius: initial;
       gap: 10px;
+      padding: 10px;
+      padding-top: 15px;
 
       .profile_Photo {
         height: 100px;
@@ -483,6 +517,11 @@
     }
 
     .infoSection {
+      .info_Header {
+        .name_Heading {
+          font-size: 16px;
+        }
+      }
       .info_Details {
         height: 80%;
         width: 100%;
@@ -492,6 +531,7 @@
 
         .info_Tag_Section {
           grid-template-columns: repeat(1, auto);
+          gap: 5px;
 
           .info_Tag {
             svg {
@@ -503,12 +543,18 @@
 
         .card_Button_Wrapper {
           justify-content: center;
-          Button {
-            font-size: 10px;
+          gap: 10px;
+          .button_section {
+            gap: 10px;
+            margin-top: 5px;
+            justify-content: center;
+            Button {
+              font-size: 12px;
 
-            svg {
-              height: 14px;
-              width: 14px;
+              svg {
+                height: 14px;
+                width: 14px;
+              }
             }
           }
         }
