update landing page carsole and some passing of black and white card

--- a/components/Carousel/DemoCarousel.module.scss
+++ b/components/Carousel/DemoCarousel.module.scss
@@ -1,133 +1,258 @@
 @import "../../styles/constants.scss";
-.containerCarousel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .carouselContent {
+// .containerCarousel {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//   }
+
+//   .carouselContent {
+//     width: 100%;
+//     max-width: 1440px;
+//   }
+
+//   .divImage {
+//     background-color: #fff;
+//     width: 100%;
+//     max-width: 335px;
+//     margin: auto;
+//     position: relative;
+//     &::after {
+//       background: #d52741a3;
+//       content: '';
+//       height: 100%;
+//       opacity: 0;
+//       position: absolute;
+//       transition: all 300ms ease-in;
+//       width: 100%;
+//       top: 0;
+//       right: 0;
+//     }
+//     &:hover::after, &:hover .cardTitle{
+//       transition: all 300ms ease-in;
+//       opacity: 0;
+//     }
+//     &:hover::after, &:hover .cardDetails{
+//       opacity: 1;
+//     }
+//     .dropdownItem {
+//       background: url(../../public/Images/nav_icon_bg.png) no-repeat;
+//       background-position: right 14em bottom 6px;
+//       cursor: pointer;
+//     }
+//     .cardTitle{
+//       text-shadow: 0 1px 1px rgb(0 0 0 / 24%);
+//       font-family: "sarah-script","sans-serif";
+//       color: $white_txt;
+//       opacity: 1;
+//     //   z-index: 1;
+//       position: absolute;
+//       // top: 0;
+//       margin-top: 65%;
+//       filter: drop-shadow(2px 4px 6px black);
+//       transition: all 100ms ease-in;
+//       left: 50%;
+//       bottom: 0px;
+//       transform: translate(-50%, -50%);
+//       margin: 0 auto;
+//       width: max-content;
+//     }
+//     .cardDetails {
+//       color: white;
+//       display: block;
+//       font-size: 14px;
+//       font-weight: 600;
+//       opacity: 0;
+//       z-index: 1;
+//       position: absolute;
+//       padding: 1rem;
+//       top: 0;
+//       margin-top: 1%;
+//       text-align: left;
+//       transition: all 300ms ease-in;
+//     }
+//   }
+
+//   .image {
+//     width: 100%;
+//     height: 100%;
+//     background-position: center center;
+//     background-repeat: no-repeat;
+//     filter: brightness(0.7);
+//     border-radius: 7px;
+//   }
+
+//   .divInfos {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: flex-start;
+//   }
+
+//   .infoTitle {
+//     font-family: Alliance2;
+//     color: #000;
+//     line-height: 0.76;
+//     font-size: 2.5rem;
+//     letter-spacing: normal;
+//     font-style: normal;
+//     font-weight: normal;
+//     font-stretch: normal;
+//     margin: 24px 0 20px 0;
+//   }
+
+//   .infoSubtitle {
+//     font-family: Alliance2;
+//     color: #000;
+//     line-height: 0.76;
+//     font-size: 1rem;
+//     letter-spacing: normal;
+//     font-style: normal;
+//     font-weight: 500;
+//     font-stretch: normal;
+//     text-transform: uppercase;
+//     margin-bottom: 30px;
+//   }
+
+//   .carousel .slide {
+//     background-color: transparent !important;
+//   }
+
+// /* For all other screen sizes, display 3 items */
+// .slide {
+//   min-width: 33% !important;
+// }
+
+// /* For screens with width < 600px, display 2 items */
+// @media only screen and (max-width: 600px) {
+//   .slide {
+//     min-width: 50% !important;
+//   }
+//   .divImage{
+//     max-width:100%;
+//   }
+// }
+
+// ****************************************************************
+
+// .mainbg {
+//   display: flex;
+//   gap: 20px;
+//   flex-direction: row;
+// }
+.divImage {
+  background-color: transparent;
+  padding: 0 10px;
+  height: 20rem;
+  position: relative;
+  &::after {
+    background: #d52741a3;
+    content: "";
+    height: 100%;
+    opacity: 0;
     width: 100%;
-    max-width: 1440px;
+    position: absolute;
+    transition: all 300ms ease-in;
+    top: 0;
+    right: 0;
+    margin: 0 10px;
+    margin-left: 0%;
   }
-  
-  .divImage {
-    background-color: #fff;
-    width: 100%;
-    max-width: 335px; 
-    margin: auto;
-    position: relative;
-    &::after {
-      background: #d52741a3;
-      content: '';
-      height: 100%;
-      opacity: 0;
-      position: absolute;
-      transition: all 300ms ease-in;
-      width: 100%;
-      top: 0;
-      right: 0; 
-    }
-    &:hover::after, &:hover .cardTitle{
-      transition: all 300ms ease-in;
-      opacity: 0;
-    }
-    &:hover::after, &:hover .cardDetails{
-      opacity: 1;
-    }
-    .dropdownItem {
-      background: url(../../public/Images/nav_icon_bg.png) no-repeat;
-      background-position: right 14em bottom 6px;
-      cursor: pointer;
-    } 
-    .cardTitle{
-      text-shadow: 0 1px 1px rgb(0 0 0 / 24%);
-      font-family: "sarah-script","sans-serif";
-      color: $white_txt;
-      opacity: 1;
-    //   z-index: 1;
-      position: absolute;
-      // top: 0;
-      margin-top: 65%;
-      filter: drop-shadow(2px 4px 6px black);
-      transition: all 100ms ease-in;
-      left: 50%;
-      bottom: 0px;
-      transform: translate(-50%, -50%);
-      margin: 0 auto;
-      width: max-content;
-    }
-    .cardDetails {
-      color: white;
-      display: block;
-      font-size: 14px;
-      font-weight: 600;
-      opacity: 0;
-      z-index: 1;
-      position: absolute;
-      padding: 1rem;
-      top: 0;
-      margin-top: 1%;
-      text-align: left;
-      transition: all 300ms ease-in;
+  &:hover::after,
+  &:hover .cardTitle {
+    transition: all 300ms ease-in;
+    opacity: 0;
+  }
+  &:hover::after,
+  &:hover .cardDetails {
+    opacity: 1;
+  }
+  .dropdownItem {
+    background: url(../../public/Images/nav_icon_bg.png) no-repeat;
+    background-position: right 14em bottom 6px;
+    cursor: pointer;
+  }
+  .cardTitle {
+    text-shadow: 0 1px 1px rgb(0 0 0 / 24%);
+    font-family: "sarah-script", "sans-serif";
+    color: $white_txt;
+    font-size: 14px;
+    opacity: 1;
+    position: absolute;
+    margin-top: 65%;
+    filter: drop-shadow(2px 4px 6px black);
+    transition: all 100ms ease-in;
+    left: 50%;
+    bottom: 0px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    width: max-content;
+    h2 {
+      font-size: 16px;
     }
   }
-  
+  .cardDetails {
+    color: white;
+    display: block;
+    font-size: 14px;
+    font-weight: 600;
+    opacity: 0;
+    z-index: 1;
+    position: absolute;
+    padding: 1rem;
+    top: 0;
+    margin-top: 1%;
+    text-align: left;
+    transition: all 300ms ease-in;
+  }
   .image {
     width: 100%;
     height: 100%;
-    background-position: center center;
-    background-repeat: no-repeat;
-    filter: brightness(0.7);
-    border-radius: 7px;
+    object-fit: cover;
   }
-  
-  .divInfos {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  
-  .infoTitle {
-    font-family: Alliance2;
-    color: #000;
-    line-height: 0.76;
-    font-size: 2.5rem;
-    letter-spacing: normal;
-    font-style: normal;
-    font-weight: normal;
-    font-stretch: normal;
-    margin: 24px 0 20px 0;
-  }
-  
-  .infoSubtitle {
-    font-family: Alliance2;
-    color: #000;
-    line-height: 0.76;
-    font-size: 1rem;
-    letter-spacing: normal;
-    font-style: normal;
-    font-weight: 500;
-    font-stretch: normal;
-    text-transform: uppercase;
-    margin-bottom: 30px;
-  }
-  
-  .carousel .slide {
-    background-color: transparent !important;
-  }
-  
-/* For all other screen sizes, display 3 items */
-.slide {
-  min-width: 33% !important;
 }
 
-/* For screens with width < 600px, display 2 items */
-@media only screen and (max-width: 600px) {
-  .slide {
-    min-width: 50% !important;
-  }
-  .divImage{
-    max-width:100%;
+.divInfos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.infoTitle {
+  font-family: Alliance2;
+  color: #000;
+  line-height: 0.76;
+  font-size: 2.5rem;
+  letter-spacing: normal;
+  font-style: normal;
+  font-weight: normal;
+  font-stretch: normal;
+  margin: 24px 0 20px 0;
+}
+
+.infoSubtitle {
+  font-family: Alliance2;
+  color: #000;
+  line-height: 0.76;
+  font-size: 1rem;
+  letter-spacing: normal;
+  font-style: normal;
+  font-weight: 500;
+  font-stretch: normal;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.arrowButton {
+  color: #000;
+  background-color: red;
+}
+.arrowButton::before {
+  color: chocolate;
+}
+
+@media only screen and (max-width: 991px) {
+  .divImage {
+    height: 21rem;
   }
 }
